<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.thedancercodes.tipcalculator.viewmodel.CalculatorViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/calculation_inputs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:paddingBottom="26dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.thedancercodes.tipcalculator.view.TipCalculatorActivity"
        tools:showIn="@layout/activity_tip_calculator">

        <!--View to provide calculation inputs-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_check_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/input_check_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_check_amount_hint"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"
                android:text="@={vm.inputCheckAmount}" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_tip_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_check_amount">

            <EditText
                android:id="@+id/input_tip_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_tip_percentage_hint"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:text="@={vm.inputTipPercentage}" />

        </android.support.design.widget.TextInputLayout>


        <!--View to show our calculation outputs-->
        <LinearLayout
            android:id="@+id/calculation_outputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            android:paddingBottom="32dp"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_tip_percentage">

            <!--Vertical Linear Layout for each output value-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bill_amount"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.outputCheckAmount}"
                    android:textAlignment="center"
                    tools:text="$20.00" />

                <TextView
                    android:id="@+id/bill_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_amount_label"
                    android:textAlignment="center"
                    tools:text="Check" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tip_amount"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.outputTipAmount}"
                    android:textAlignment="center"
                    tools:text="$1.50" />

                <TextView
                    android:id="@+id/tip_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip_amount_label"
                    android:textAlignment="center"
                    tools:text="Tip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/grand_total"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.outputTotalDollarAmount}"
                    android:textAlignment="center"
                    tools:text="$21.50" />

                <TextView
                    android:id="@+id/grand_total_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grand_total_label"
                    android:textAlignment="center"
                    tools:text="Total" />

            </LinearLayout>

        </LinearLayout>

        <!-- Display location name to user if one has been set for a tip -->
        <TextView
            android:id="@+id/calculation_name"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{vm.locationName}"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculation_outputs"
            tools:text="Planet Yogurt" />


    </android.support.constraint.ConstraintLayout>
</layout>
