...
        <include
            android:id="@+id/content"
            app:vm="@{vm}"
            layout="@layout/content_tip_calculator" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/calculate_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> vm.calculateTip()}"
            app:srcCompat="@drawable/ic_attach_money_white_24dp" />
...
